--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "start": "ts-node src/index.ts",
+    "dev": "ts-node-dev src/index.ts",
     "ts-node": "ts-node",
     "multiply": "ts-node src/multiplier.ts",
     "calculate": "ts-node src/calculator.ts"
   },
   "prettier": {},
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
